--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
 
     </div>
 
-    banner7
+    <!-- banner7 -->
 
-    <!-- <div class="banner7">
+    <div class="banner7">
         <div class="contant7_1">
             <h1><span>Our Customer Said</span> About Our Natural Shampoo</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, libero. lore Lorem ipsum dolor sit
@@ -293,7 +293,7 @@
             </div>
 
         </div>
-    </div> -->
+    </div>
 
     <!-- banner8 -->
     <!-- 
