--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     </div>
 
     <!-- banner8 -->
-    <!-- 
+    
     <div class="banner8">
         <div class="contant8">
             <h1>From Our <span>Blog Articles</span></h1>
@@ -307,7 +307,7 @@
         <div class="images8">
 
             <div class="about_images8">
-                <img src="/blog-1.jpg" alt="" width="100%">
+                <img src="./images/blog-1.jpg" alt="" width="100%">
                 <h4>Foods that are good for your hair growing</h4>
                 <div class="icons8"><i class="fa-solid fa-eye"></i><span>9999 Viwes</span> <i
                         class="fa-solid fa-comments"></i> <span>9999 Comments</span></div>
@@ -316,7 +316,7 @@
             </div>
 
             <div class="about_images8">
-                <img src="/blog-2.jpg" alt="" width="100%">
+                <img src="./images/blog-2.jpg" alt="" width="100%">
                 <h4>How to take care of hair naturally</h4>
                 <div class="icons8"><i class="fa-solid fa-eye"></i><span>9999 Viwes</span> <i
                         class="fa-solid fa-comments"></i> <span>9999 Comments</span></div>
@@ -325,7 +325,7 @@
             </div>
 
             <div class="about_images8">
-                <img src="/blog-3.jpg" alt="" width="100%">
+                <img src="./images/blog-3.jpg" alt="" width="100%">
                 <h4>How to use our natural & organic shampoo</h4>
                 <div class="icons8"><i class="fa-solid fa-eye"></i><span>9999 Viwes</span> <i
                         class="fa-solid fa-comments"></i> <span>9999 Comments</span></div>
@@ -337,7 +337,7 @@
         </div>
 
     </div>
- -->
+
     <!-- banner9 -->
 
     <!-- 
